[package]
name = "sui-forking"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
anyhow.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

bcs.workspace = true
bin-version.workspace = true
forking-data-store = { path = "../forking-data-store" }
rand.workspace = true
simulacrum = { path = "../simulacrum" }
sui-config.workspace = true
sui-protocol-config.workspace = true
sui-swarm-config.workspace = true
sui-types.workspace = true

# gRPC + HTTP
axum.workspace = true
axum-server.workspace = true
http.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tonic-reflection.workspace = true
tower.workspace = true
tower-http.workspace = true

# Sui RPC + types
sui-rpc.workspace = true
sui-rpc-api.workspace = true
sui-sdk-types.workspace = true

# Mysten infrastructure
mysten-network.workspace = true
sui-futures.workspace = true

# Metrics + observability
prometheus.workspace = true

# Misc
futures.workspace = true
pin-project.workspace = true
prost.workspace = true
prost-types.workspace = true
tap.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
